fix(twitch): Make text readable when using theater mode (#216)
* Update stream title color

* Update pinned chat message color

* Update mature content warning color

* Update hype train color

--- a/styles/twitch/catppuccin.user.css
+++ b/styles/twitch/catppuccin.user.css
@@ -54,6 +54,41 @@
       background-color: @base;
     }
 
+    p[data-test-selector="stream-info-card-component__subtitle"],
+    p[data-test-selector="stream-info-card-component__description"] {
+      color: @text !important;
+    }
+
+    a[data-a-target="player-info-game-name"] {
+      color: @accent-Color;
+    }
+
+    div.pinned-chat__pinned-by svg {
+      color: @text;
+    }
+
+    p.pinned-chat__message span {
+      color: @text;
+    }
+
+    p.pinned-chat__message a {
+      color: @accent-Color;
+    }
+
+    div[data-a-target="content-classification-warning-disclosure-overlay"] p {
+      color: @text;
+    }
+
+    div.hype-train-progress-bar-info-view__level-container p,
+    div.hype-train-approaching-view__leftSide p,
+    div.hype-train-expanded-layout p {
+      color: @text;
+    }
+
+    div.hype-train-progress-bar-info-view__progress-value span {
+      color: @accent-Color;
+    }
+
     & .carousel-metadata {
       background: @crust;
     }
@@ -136,7 +171,7 @@
       }
     }
     .chat-room when not (@lightFlavor = latte) {
-        background: @base;
+      background: @base;
     }
 
     &,
